...
                                <rect key="frame" x="0.0" y="724" width="414" height="50"/>
                                <color key="backgroundColor" name="BrandBlue"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="7c7-Hm-jBY"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" name="BrandOrange"/>
                                </state>
                                <connections>
                                    <segue destination="9kB-5h-6bd" kind="show" id="18z-BQ-tTv"/>
                                </connections>
                            </button>
...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xYc-zm-VOT" userLabel="EmailView">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="177"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="tBO-D4-snz">
                                        <rect key="frame" x="0.0" y="20" width="414" height="137"/>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J1v-Nf-pAT">
                                        <rect key="frame" x="48" y="50" width="318" height="45"/>
                                        <color key="textColor" name="BrandBlue"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
...
                                            <action selector="registerPressed:" destination="g2H-8L-Y81" eventType="touchUpInside" id="ROg-R7-jGd"/>
                                        </connections>
                                    </button>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="2bz-tO-ovP">
                                        <rect key="frame" x="0.0" y="20" width="414" height="137"/>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CLS-0F-hxJ">
                                        <rect key="frame" x="49" y="50" width="317" height="45"/>
                                        <color key="textColor" name="BrandBlue"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                </subviews>
...
                                        <rect key="frame" x="0.0" y="675" width="414" height="50"/>
                                        <color key="backgroundColor" name="BrandOrange"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="i9V-N6-dIS"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <state key="normal" title="New message">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <segue destination="u8E-C3-8id" kind="show" identifier="MessageConfigurationDetail" id="HqM-uR-Pev"/>
                                        </connections>
                                    </button>
...
                                <rect key="frame" x="0.0" y="763" width="414" height="50"/>
                                <color key="backgroundColor" name="BrandOrange"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Kt4-7F-rIJ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Save message">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="saveButtonTouch:" destination="u8E-C3-8id" eventType="touchUpInside" id="Tab-De-vXy"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="sK4-EK-6Lu" firstAttribute="bottom" secondItem="Cze-aO-DIP" secondAttribute="bottom" id="xTq-a5-4QZ"/>
                            <constraint firstItem="sK4-EK-6Lu" firstAttribute="leading" secondItem="Cze-aO-DIP" secondAttribute="leading" id="zrj-Xh-0ZM"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="a7Z-lt-y5a"/>
                    <connections>
                        <outlet property="btnAddReceiver" destination="znn-Ns-J5F" id="x6z-Ql-Uxn"/>
                        <outlet property="categoryPicker" destination="YSF-T5-neo" id="dZy-pM-fJG"/>
                        <outlet property="emailCounter" destination="PdV-jA-Pqe" id="mac-jl-v2f"/>
                        <outlet property="emailTextField" destination="0wU-74-MOD" id="K6U-Iy-nv1"/>
                        <outlet property="frequencySlider" destination="o6o-8M-4D6" id="kWU-Ok-F4j"/>
                        <outlet property="frequencyValue" destination="jnp-fn-n2Y" id="aJx-th-3iY"/>
                        <outlet property="messageCounter" destination="Ca0-ix-V5z" id="XNb-Ck-zGH"/>
                        <outlet property="messageTextField" destination="rbx-bk-DuU" id="MWF-Qd-QFV"/>
                        <outlet property="messageValidator" destination="qvr-Ur-t9w" id="Zfq-Ev-bFn"/>
                        <outlet property="receiverValidator" destination="E1M-HT-dOZ" id="78y-Wh-TpL"/>
                        <outlet property="tagListViewReceivers" destination="3Fu-bf-a0h" id="3HZ-Gi-Qye"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="o1t-X7-Kft" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
