...
        static let message = "Messsage"
        static let receiver = "Receiver"
        static let category = "Category"
    }
    
    struct accessibilityIdentifiers{
        static let messagesTableView = "MessagesTableView"
        static let date = "Date"
        static let message = "Messsage"
        static let receiver = "Receiver"
        static let category = "Category"
    }
}
...
